nullaway_error_2fb2eabc-0e70-4301-905e-5ea0fa0384ec.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/graphics/animation/Animation.java:332: error: [NullAway] dereferenced expression this.getCurrentKeyFrame() is @Nullable
    if (!this.isPlaying() || Game.time().since(this.lastFrameUpdate) < this.getCurrentKeyFrame().getDuration()) {
                                                                                                ^
    (see http://t.uber.com/nullaway )
